// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark theme Avatar lg 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#3a1a1a",
      "borderRadius": 10,
      "height": 44,
      "justifyContent": "center",
      "width": 44,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#fca5a5",
        },
        undefined,
      ]
    }
  >
    TC
  </Text>
</View>
`;

exports[`dark theme Avatar md 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2d2260",
      "borderRadius": 10,
      "height": 36,
      "justifyContent": "center",
      "width": 36,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 13,
          "fontWeight": "500",
          "lineHeight": 18,
        },
        {
          "color": "#b8b0ff",
        },
        undefined,
      ]
    }
  >
    JA
  </Text>
</View>
`;

exports[`dark theme Avatar sm 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1a3a2a",
      "borderRadius": 10,
      "height": 28,
      "justifyContent": "center",
      "width": 28,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#6ee7b7",
        },
        undefined,
      ]
    }
  >
    ML
  </Text>
</View>
`;

exports[`dark theme Badge custom 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#3d2200",
      "borderRadius": 22,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#fbbf24",
        },
        undefined,
      ]
    }
  >
    €8.50
  </Text>
</View>
`;

exports[`dark theme Badge default 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#0d2520",
      "borderRadius": 22,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#24c28e",
        },
        undefined,
      ]
    }
  >
    Assigned
  </Text>
</View>
`;

exports[`dark theme Button danger 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#2d1414",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#f87171",
          },
          undefined,
        ]
      }
    >
      Delete
    </Text>
  </View>
</View>
`;

exports[`dark theme Button disabled 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1D9E75",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 0.7,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`dark theme Button ghost 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#1D9E75",
        "borderRadius": 22,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#1D9E75",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`dark theme Button primary 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1D9E75",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`dark theme Button sm 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1D9E75",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`dark theme Card 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#16213e",
        "borderRadius": 18,
        "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        "elevation": 2,
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#e8e8f5",
        },
        undefined,
      ]
    }
  >
    Content
  </Text>
</View>
`;

exports[`dark theme Card pressable 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#16213e",
        "borderRadius": 18,
        "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        "elevation": 2,
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#e8e8f5",
        },
        undefined,
      ]
    }
  >
    Tap me
  </Text>
</View>
`;

exports[`dark theme Divider 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#2a2a4a",
        "height": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`dark theme ScreenWrapper 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    [
      {
        "backgroundColor": "#1a1a2e",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#e8e8f5",
        },
        undefined,
      ]
    }
  >
    Screen
  </Text>
</View>
`;

exports[`dark theme Text body 1`] = `
<Text
  style={
    [
      {
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 22,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;

exports[`dark theme Text caption 1`] = `
<Text
  style={
    [
      {
        "fontSize": 11,
        "fontWeight": "400",
        "lineHeight": 16,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  Small
</Text>
`;

exports[`dark theme Text heading1 1`] = `
<Text
  style={
    [
      {
        "fontSize": 30,
        "fontWeight": "700",
        "lineHeight": 36,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  Title
</Text>
`;

exports[`dark theme Text heading2 1`] = `
<Text
  style={
    [
      {
        "fontSize": 24,
        "fontWeight": "700",
        "lineHeight": 30,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  Subtitle
</Text>
`;

exports[`dark theme Text label 1`] = `
<Text
  style={
    [
      {
        "fontSize": 13,
        "fontWeight": "500",
        "lineHeight": 18,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  Label
</Text>
`;

exports[`dark theme Text mono 1`] = `
<Text
  style={
    [
      {
        "fontFamily": "monospace",
        "fontSize": 13,
        "fontWeight": "400",
        "lineHeight": 18,
      },
      {
        "color": "#e8e8f5",
      },
      undefined,
    ]
  }
>
  €12.50
</Text>
`;

exports[`light theme Avatar md 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2d2260",
      "borderRadius": 10,
      "height": 36,
      "justifyContent": "center",
      "width": 36,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 13,
          "fontWeight": "500",
          "lineHeight": 18,
        },
        {
          "color": "#b8b0ff",
        },
        undefined,
      ]
    }
  >
    JA
  </Text>
</View>
`;

exports[`light theme Badge default 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#e6f5f0",
      "borderRadius": 22,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 16,
        },
        {
          "color": "#24c28e",
        },
        undefined,
      ]
    }
  >
    Assigned
  </Text>
</View>
`;

exports[`light theme Button ghost 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#1D9E75",
        "borderRadius": 22,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#1D9E75",
          },
          undefined,
        ]
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`light theme Button primary 1`] = `
<View
  style={
    {
      "transform": [
        {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1D9E75",
        "borderColor": undefined,
        "borderRadius": 22,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "500",
            "lineHeight": 18,
          },
          {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      Pay
    </Text>
  </View>
</View>
`;

exports[`light theme Card 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 18,
        "boxShadow": "0px 1px 2px rgba(0, 0, 0, 0.15)",
        "elevation": 2,
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#1a1a2e",
        },
        undefined,
      ]
    }
  >
    Content
  </Text>
</View>
`;

exports[`light theme Divider 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#e2e4ed",
        "height": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`light theme ScreenWrapper 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    [
      {
        "backgroundColor": "#f8f9fc",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        },
        {
          "color": "#1a1a2e",
        },
        undefined,
      ]
    }
  >
    Screen
  </Text>
</View>
`;

exports[`light theme Text body 1`] = `
<Text
  style={
    [
      {
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 22,
      },
      {
        "color": "#1a1a2e",
      },
      undefined,
    ]
  }
>
  Hello
</Text>
`;
